# yolov5_tensorrt_so

./: CMakeLists.txt  CMakeLists_exe.txt  CMakeLists_so.txt  Dockerfile  README.md  config_script.py  docker-compose.yml  example-run.sh  gen_wts.py  python_trt.py  script.sh  test  test.cpp  upload_neptune.py  yololayer_base.h  yolov5_base.cpp  yolov5_custom.cpp
scripts/: build_executable.sh  build_so.sh  build_wts.sh  combined.sh  echo.sh  export.sh  export_engine.sh
